src/objects/VartopiaDRS__Search_Result_FieldSet__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>VartopiaDRS__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Search Result FieldSet</label>
</CustomObject>